Bux fix 1px video overflow

--- a/frontend/app/src/styles/_global.scss
+++ b/frontend/app/src/styles/_global.scss
@@ -28,7 +28,6 @@ body,
     position: fixed;
     inset: 0;
     z-index: -1;
-    width: calc(100% + 1px); /* Fix green right border out of sharpen filter */
 
     img {
         position: absolute;
